<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="movie_detail">Movie Detail</string>

    <string name="no_connection">You have disconnected. Please check your internet connection and try again.</string>
    <string name="error_message">Failed to get results. Please try again.</string>

    <string name="pref_sort_label">Sort Order</string>
    <string name="pref_sort_label_most_popular">Most Popular</string>
    <string name="pref_sort_label_top_rated">Top Rated</string>

    <!-- Key name for sort preference in SharedPreferences -->
    <string name="pref_sort_key" translatable="false">sort</string>

    <string name="pref_sort_most_popular_value" translatable="false">popular</string>
    <string name="pref_sort_top_rated_value" translatable="false">top_rated</string>

    <!-- Detail Activity-->
    <string name="detail_original_title_label">Original Title:</string>
    <string name="detail_overview_label">Overview:</string>
    <string name="detail_vote_average_label">Vote Average:</string>
    <string name="detail_release_date_label">Release Date:</string>

    <!-- Content descriptions-->
    <string name="movie_picture_content_description">Movie Picture</string>
</resources>
